# tf-minecraft

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  dns.tf  ecs.tf  efs.tf  iam.tf  minecraft.tf  network.tf  outputs.tf  providers.tf  pyproject.toml  ssm.tf  terraform.tfvars  variables.tf
.github/: dependabot.yml
.github/workflows/: build-component.yml  discord-bot.yml  dns-updater.yml  idle-watcher.yml  mc-discord-bot.yml  mc-dns-updater.yml  mc-idle-watcher.yml  minecraft-tools.yml  terraform.yml
bootstrap/: README.md  github-oidc-role.tf  providers.tf
bootstrap/.terraform/: terraform.tfstate
bootstrap/.terraform/providers/registry.terraform.io/hashicorp/aws/6.13.0/: linux_amd64
discord-bot/: .coverage  .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
discord-bot/src/: bot.py
discord-bot/tests/: test_bot.py
dns-updater/: .coverage  Dockerfile  pyproject.toml  update-dns.sh
dns-updater/src/: dns_updater.py
dns-updater/tests/: test_dns_updater.py
docker/: discord-bot.Dockerfile  dns-updater.Dockerfile  idle-watcher.Dockerfile
mc-discord-bot/: Dockerfile  pyproject.toml
mc-dns-updater/: .dockerignore  Dockerfile  pyproject.toml  update-dns.sh
mc-dns-updater/tests/: test_dns_updater.py
mc-idle-watcher/: Dockerfile  pyproject.toml
mc-idle-watcher/src/: idle_watcher.py
mc-idle-watcher/tests/: test_idle_watcher.py
src/minecraft_tools/: config.py  health.py  logging_config.py
src/minecraft_tools/discord_bot/: main.py
src/minecraft_tools/dns_updater/: main.py
src/minecraft_tools/idle_watcher/: main.py
terraform/: dns.tf  iam.tf  minecraft.tf  network.tf  outputs.tf  providers.tf  remote-state.tf  secrets.tf  secrets.yaml.encrypted  ssm.tf  temp-ec2.tf  terraform.tfvars  variables.tf
terraform/modules/temp-ec2/: main.tf  outputs.tf  user-data.sh  variables.tf
tests/: test_config.py  test_discord_bot.py  test_dns_updater.py  test_health.py  test_idle_watcher.py  test_logging.py
tests/discord_bot/: test_main.py
tests/dns_updater/: test_main.py
tests/idle_watcher/: test_main.py
