[project]
name = "minecraft-tools"
version = "0.1.0"
description = "Minecraft server management tools"
authors = [{name = "Melvyn de Kort", email = "melvyn@mdekort.nl"}]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "discord-py>=2.3.2",
    "typing-extensions>=4.0.0",
    "mcrcon>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "moto>=5.1.13",
    "responses>=0.25.0",
]

[project.scripts]
discord-bot = "minecraft_tools.discord_bot.main:main"
dns-updater = "minecraft_tools.dns_updater.main:main"
idle-watcher = "minecraft_tools.idle_watcher.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minecraft_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
