[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "Discord bot for Minecraft server control"
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
discord-py = "^2.3.2"
boto3 = "^1.34.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
moto = "^5.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
