[tool.poetry]
name = "mc-idle-watcher"
version = "0.1.0"
description = "Minecraft idle watcher for automatic server shutdown"
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
requests = "^2.31.0"
mcrcon = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^7.0.0"
moto = "^5.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
